# zb_nrf52840_co2

./: .gitignore  .gitmodules  .vimrc.lua  CMakeLists.txt  build-l.sh  config_rtt.exp  dts.overlay  e.sh  ecmake.sh  ewest.sh  flash.exp  flash_boot.exp  ocd_cmsis_dap.sh  ocd_stlink.sh  pm_static.yml  prj-llvm.conf  reset.exp  reset_halt.exp  screen.sh
bootloader/: bootloader_0_9.hex
include/: zb_dimmable_light.h
src/: led.cpp  led.h  main.cpp
src/lib/: lib_msgq_typed.hpp  libz_thread_lock.hpp
src/zb/: zb_alarm.hpp  zb_buf.hpp  zb_co2_cluster_desc.hpp  zb_desc_helper_types.hpp  zb_desc_helper_types_attr.hpp  zb_desc_helper_types_cluster.hpp  zb_desc_helper_types_device.hpp  zb_desc_helper_types_ep.hpp  zb_desc_helper_types_self_contained.hpp  zb_handers.hpp  zb_humid_cluster_desc.hpp  zb_main.hpp  zb_poll_ctrl_cluster_desc.hpp  zb_power_config_cluster_desc.hpp  zb_signals.hpp  zb_std_cluster_desc.hpp  zb_str.hpp  zb_temp_cluster_desc.hpp  zb_types.hpp
